kubernetes/app/main/dbgate/dbgate/http.httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dbgate-http
spec:
  parentRefs:
    - name: default
      sectionName: http
      kind: Gateway
      namespace: istio-system
    - name: default
      sectionName: http-local
      kind: Gateway
      namespace: istio-system
  hostnames:
    - dbgate.${PUBLIC_DOMAIN}
    - dbgate.${LOCAL_DOMAIN}
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
