kubernetes/app/main/dbgate/dbgate/https.httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dbgate-https
spec:
  parentRefs:
     - name: default
       sectionName: https-wildcard
       kind: Gateway
       namespace: istio-system
     - name: default
       sectionName: https-wildcard-local
       kind: Gateway
       namespace: istio-system
  hostnames:
    - dbgate.${PUBLIC_DOMAIN}
    - dbgate.${LOCAL_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: dbgate-dbgate
          port: 3000
