kubernetes/app/main/dbgate/dbgate/authorizationpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/security.istio.io/authorizationpolicy_v1.json
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: dbgate-authorization-policy
spec:
  selector:
    matchLabels:
      app: dbgate-dbgate
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: local
  action: CUSTOM
  provider:
    name: authentik
  rules:
    - to:
        - operation:
            hosts:
              - dbgate.*
